WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130783
REGRESSION(
r162679
): Poster image visible under the video
https://bugs.webkit.org/show_bug.cgi?id=130783
Summary
REGRESSION(r162679): Poster image visible under the video
Jer Noble
Reported
2014-03-26 11:06:01 PDT
In
http://trac.webkit.org/r162679
, we regressed the behavior of the <video> element when transitioning between poster and video modes.
Attachments
Patch
(1.80 KB, patch)
2014-03-26 11:25 PDT
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-03-26 11:25:53 PDT
Created
attachment 227865
[details]
Patch
Jer Noble
Comment 2
2014-03-26 11:38:23 PDT
Committed
r166304
: <
http://trac.webkit.org/changeset/166304
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug